--- a/src/hr_management/publication/templates/create_publication.html
+++ b/src/hr_management/publication/templates/create_publication.html
@@ -26,7 +26,7 @@
 
             {% csrf_token %}
 
-            <button type="submit"> Post </button>
+            <button class="btn btn-warning"type="submit"> Post </button>
 
         </form>
 
