--- a/src/hr_management/req_leave/templates/manage_request.html
+++ b/src/hr_management/req_leave/templates/manage_request.html
@@ -15,11 +15,7 @@
     <h1>Manage Requests</h1>
 
     <!-- Add buttons to filter requests -->
-    <div>
-        <button onclick="filterRequests('pending')">Pending</button>
-        <button onclick="filterRequests('accepted')">Accepted</button>
-        <button onclick="filterRequests('declined')">Declined</button>
-        <button onclick="filterRequests('all')">All</button>
+    
     </div>
 
     <script>
@@ -29,6 +25,12 @@
         }
     </script>
 
+    <section>
+        <button class="button accept-button" onclick="filterRequests('pending')">Pending</button>
+        <button class="button accept-button" onclick="filterRequests('accepted')">Accepted</button>
+        <button class="button accept-button" onclick="filterRequests('declined')">Declined</button>
+        <button class="button accept-button" onclick="filterRequests('all')">All</button>
+    </section>
     <table>
         <thead>
             <tr>
