--- a/src/hr_management/user/templates/help/admin_home_help.html
+++ b/src/hr_management/user/templates/help/admin_home_help.html
@@ -17,16 +17,19 @@
     <p class="has-line-data" data-line-start="2" data-line-end="3">
     <strong> Welcome to you home page: </strong>
     </p>
+
+
     <h3> Administrator Dashboard </h3>
     <p class="has-line-data" data-line-start="4" data-line-end="5">
     Here we have 4 panels, each will send you to another place
     </p>
-
     <div class='class="w-25' >
     <img src={% static 'images/Dashboard_admin.png' %} class="object-fit-scale border rounded" alt="HelpCenterAdmin"/>
     </div>
     <br>
     <hr>
+
+
     <h3 class="code-line" data-line-start="6" data-line-end="7">
     <a id="Mange_Employees_6"></a>Mange Employees
     </h3>
@@ -46,6 +49,8 @@
     <br>
     <img src={% static 'images/manage_employees.png' %} class="object-fit-scale border rounded" alt="HelpCenterAdmin"/>
     <hr>
+
+
     <h3 class="code-line" data-line-start="14" data-line-end="15">
     <a id="Manage_Requests_14"></a>Manage Requests
     </h3>
@@ -53,7 +58,10 @@
     Employees will be able to send you request for PTO and sick days.<br />
     You will able to see who request and accept or deny their request
     </p>
+    <img src={% static 'images/manage_requests.png' %} class="object-fit-scale border rounded" alt="HelpCenterAdmin"/>
     <hr>
+
+    
     <h3 class="code-line" data-line-start="18" data-line-end="19">
     <a id="Create_Publications_18"></a>Create Publications
     </h3>
