Added some visual changes
Added changes to the calendar

--- a/src/hr_management/calendar_app/templates/calendar.html
+++ b/src/hr_management/calendar_app/templates/calendar.html
@@ -30,11 +30,13 @@
 </head>
 
 <body>
-    <h1> Calendar </h1>
-
-    <h2> Absence </h2>
-
     <section>
+    <h1> Calendar </h1>
+    </section>
+    <br>
+    <section>
+
+        <h2> Absence </h2>
         <table>
             <thead>
                 <tr>
@@ -58,9 +60,10 @@
         </table>
     </section>
 
-    <h2> Publication </h2>
+    <br>    
 
     <section>
+        <h2> Publication </h2>
         <table>
             <thead>
                 <tr>
@@ -80,6 +83,7 @@
             </tbody>
         </table>
     </section>
+    <br>
 
 
     <!-- Calendar Section -->
