Changed to have a much uniformed

--- a/src/hr_management/req_leave/static/req_leave/style.css
+++ b/src/hr_management/req_leave/static/req_leave/style.css
@@ -6,15 +6,13 @@ body {
 }
 
 h1 {
-    background-color: #e9e9f1;
-    color: #033047;
-    padding: 20px;
+    padding: 0;
     text-align: center;
 }
 
 /* Viewing Requests */
 table {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 20px auto;
     background-color: #fff;
     border-radius: 5px;
@@ -101,11 +99,10 @@ button {
 }
 
 section {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgb(220, 220, 220);
-    
 }
