--- a/src/hr_management/req_leave/templates/manage_request.html
+++ b/src/hr_management/req_leave/templates/manage_request.html
@@ -12,8 +12,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'req_leave/style.css' %}">
 </head>
 <body>
+    <section>
     <h1>Manage Requests</h1>
-
+    </section>
     <!-- Add buttons to filter requests -->
     
     </div>
@@ -24,13 +25,12 @@
             window.location.href = "{% url 'req_leave:manage_request' %}?status=" + status;
         }
     </script>
-
-    <section>
-        <button class="button accept-button" onclick="filterRequests('pending')">Pending</button>
-        <button class="button accept-button" onclick="filterRequests('accepted')">Accepted</button>
-        <button class="button accept-button" onclick="filterRequests('declined')">Declined</button>
-        <button class="button accept-button" onclick="filterRequests('all')">All</button>
-    </section>
+        <section>
+        <button class="button accept-button" type="button" onclick="filterRequests('pending')">Pending</button>
+        <button class="button accept-button" type="button" onclick="filterRequests('accepted')">Accepted</button>
+        <button class="button accept-button" type="button" onclick="filterRequests('declined')">Declined</button>
+        <button class="button accept-button" type="button" onclick="filterRequests('all')">All</button>
+        </section>
     <table>
         <thead>
             <tr>
