--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -56,7 +56,11 @@
           </p>      
           <p class="nav-item">
             <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
-          </p>   
+          </p>
+          <hr>
+          <p class="nav-item">
+            <a class="nav-link" href="{% url 'help' %}">Help Center</a>
+          </p>
         {% endif %}
         
       </div>
