Changed button to see employee record from 'Edit' to 'View'.

--- a/src/hr_management/user/templates/administrator/manage_employees.html
+++ b/src/hr_management/user/templates/administrator/manage_employees.html
@@ -69,7 +69,7 @@
           <td>{{ employee.employee_type }}</td>
           <td>{{ employee.phone }}</td>
           <td>{{ employee.id }}</td>
-          <td><a href="{% url 'employee_record' employee.id %}" class="btn btn-info">Edit</a> </td>
+          <td><a href="{% url 'employee_record' employee.id %}" class="btn btn-info">View</a> </td>
         </tr>
       {% endfor %}
     {% endif %}
