--- a/src/hr_management/user/templates/employees/employee_home.html
+++ b/src/hr_management/user/templates/employees/employee_home.html
@@ -53,10 +53,7 @@
 
             <div id="subtitle3"><br/>
                 <p><a href="{% url 'submit_req' %}" class="btn btn-warning">Request Day Off</a></p>
-                <p><a href="{% url 'view_req' %}" class="btn btn-warning" id="request-button">View Request History</a></p>
-            </div>
-            <div id="subtitle3"><br/>
-                <p><h3>Personal Calendar goes here ...</h3></p>
+                <p><a href="{% url 'view_req' %}" class="btn btn-info" id="request-button">View Request History</a></p>
             </div>
         </div> 
     </div>
