--- a/src/hr_management/user/templates/administrator/register_employee.html
+++ b/src/hr_management/user/templates/administrator/register_employee.html
@@ -4,7 +4,7 @@
 
 <div class="col-md-6 offset-md-3">
     <br/><br/>
-<h1>Create Employee</h1>
+<h1>Register Employee</h1>
 <br/>
 
 <form method="POST" action="">
@@ -27,7 +27,7 @@
 	  <button type="submit" class="btn btn-warning">Register Employee</button>
 	</form>
 	<br/>
-  	<a href="{% url 'manage_employees' %}" class="btn btn-danger">Back</a>
+  	<a href="{% url 'manage_employees' %}" class="btn btn-secondary">Back</a>
 
 </div>
 
