--- a/src/hr_management/user/templates/employees/edit_profile.html
+++ b/src/hr_management/user/templates/employees/edit_profile.html
@@ -17,7 +17,7 @@
     
     </form>
     <br/>
-    <a href="{% url 'employee_home' %}" class="btn btn-danger">Back</a>
+    <a href="{% url 'employee_home' %}" class="btn btn-secondary">Back</a>
     
 </div>
 
