Help center employee

--- a/src/hr_management/user/templates/help/admin_home_help.html
+++ b/src/hr_management/user/templates/help/admin_home_help.html
@@ -15,7 +15,7 @@
     <a id="Help_Center_Admin_0"></a>Help Center for Admininitrator
     </h1>
     <p class="has-line-data" data-line-start="2" data-line-end="3">
-    <strong> Welcome to you home page: </strong>
+    <strong> Welcome to your home page: </strong>
     </p>
 
 
@@ -61,7 +61,7 @@
     <img src={% static 'images/manage_requests.png' %} class="object-fit-scale border rounded" alt="HelpCenterAdmin"/>
     <hr>
 
-    
+
     <h3 class="code-line" data-line-start="18" data-line-end="19">
     <a id="Create_Publications_18"></a>Create Publications
     </h3>
