--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -57,6 +57,10 @@
           <p class="nav-item">
             <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
           </p>   
+          <hr>
+          <p class="nav-item">
+            <a class="nav-link" href="{% url 'help' %}">Help Center</a>
+          </p>
         {% endif %}
         
       </div>
