--- a/src/hr_management/user/templates/help/employee_home_help.html
+++ b/src/hr_management/user/templates/help/employee_home_help.html
@@ -13,7 +13,7 @@
 
 <section>
     <h1 class="code-line" data-line-start="0" data-line-end="1">
-    <a id="Help_Center_Admin_0"></a>Help Center for Admininitrator
+    <a id="Help_Center_Admin_0"></a>Help Center for Employees
     </h1>
 
     <p class="has-line-data" data-line-start="2" data-line-end="3">
