Fixed button issues on the Create Publications template

--- a/src/hr_management/publication/templates/create_publication.html
+++ b/src/hr_management/publication/templates/create_publication.html
@@ -46,8 +46,8 @@
         
 
         <!-- Edit Button -->    <!-- Text Decoration none to remove underline -->
-        <button class="btn btn-warning"  id= "edit-button"
-        href="{% url 'publication:edit_publication' id=post.id %}">Edit</button>   
+        <a class="btn"  id= "edit-button"
+        href="{% url 'publication:edit_publication' id=post.id %}">Edit</a>   
         <br>
         <hr>
         <!-- Remove Button -->
@@ -55,8 +55,7 @@
         action="{% url 'publication:remove_publication' id=post.id %}">
 
             {% csrf_token %}
-            <a type="submit" class="btn btn-danger" id="remove-button">Remove</a>
-
+            <input type="submit" value="Remove" class="btn btn-danger">
 
         </form>
         
