--- a/src/hr_management/publication/templates/index.html
+++ b/src/hr_management/publication/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1> Publications Page 🐙</h1>
+    <h1> Publications Page </h1>
 
         {% for post in publication_post %}
         <section>
