Added Request Days Off functionality to admin_home and admin navbar section.

--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -32,6 +32,9 @@
             <a class="nav-link" href="{% url 'manage_req' %}">Manage Requests</a>
           </p> 
           <p class="nav-item">
+            <a class="nav-link" href="{% url 'submit_req' %}">Request Days Off</a>
+          </p> 
+          <p class="nav-item">
             <a class="nav-link" href="{% url 'create_publication' %}">Publications</a>
           </p>      
           <p class="nav-item">
