Fixed typo in admin dashboard

--- a/src/hr_management/user/templates/administrator/admin_home.html
+++ b/src/hr_management/user/templates/administrator/admin_home.html
@@ -15,7 +15,7 @@
                 <h4>Requests</h4>
                 <p>View and manage employee requests.</p>
                 <a href="{% url 'manage_req' %}"><button class="btn btn-info" type="button">Manage Requests</button></a>
-                <a href="{% url 'submit_req' %}"><button class="btn btn-info" type="button">Requests Days Off</button></a>
+                <a href="{% url 'submit_req' %}"><button class="btn btn-info" type="button">Request Days Off</button></a>
             </div>
             <div class="division-4-item">
                 <h4>Create Publications</h4>
