Added the missing 'Cancel' button, and revised navigation in user module.

--- a/src/hr_management/user/templates/administrator/update_employee.html
+++ b/src/hr_management/user/templates/administrator/update_employee.html
@@ -14,8 +14,10 @@
     
     <br/>
     <button type="submit" class="btn btn-warning">Update Employee</button>
-    
     </form>
+    <br/>
+    <a href="{% url 'employee_record' employee.id %}" class="btn btn-secondary">Cancel</a>
+
     
 </div>
 
