--- a/src/hr_management/user/templates/administrator/register_employee.html
+++ b/src/hr_management/user/templates/administrator/register_employee.html
@@ -27,7 +27,7 @@
 	  <button type="submit" class="btn btn-warning">Register Employee</button>
 	</form>
 	<br/>
-  	<a href="{% url 'manage_employees' %}" class="btn btn-secondary">Back</a>
+  	<a href="{% url 'manage_employees' %}" class="btn btn-secondary">Cancel</a>
 
 </div>
 
