--- a/src/hr_management/req_leave/templates/manage_request.html
+++ b/src/hr_management/req_leave/templates/manage_request.html
@@ -52,6 +52,9 @@
                 <td>{{ leave_request.days_requested }}</td>
                 <td>{{ leave_request.request_type }}</td>
                 <td>{{ leave_request.request_status }}</td>
+                
+                {% if leave_request.request_status == "Pending" %}
+                
                 <td>
                     <form method="post"
                     action="{% url 'req_leave:update_request_status' pk=leave_request.pk %}">
@@ -71,6 +74,9 @@
 
                     </form>
                 </td>
+
+            {% endif %}
+
             </tr>
             {% empty %}
             <tr>
