--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -30,6 +30,9 @@
           </p>
           <p class="nav-item">
             <a class="nav-link" href="{% url 'manage_req' %}">Manage Requests</a>
+          </p>
+          <p class="nav-item">
+            <a class="nav-link" href="{% url 'view_req' %}">View Requests</a>
           </p> 
           <p class="nav-item">
             <a class="nav-link" href="{% url 'submit_req' %}">Request Days Off</a>
@@ -53,6 +56,9 @@
           </p>
           <p class="nav-item">
             <a class="nav-link" href="{% url 'submit_req' %}">Send Requests</a>
+          </p> 
+          <p class="nav-item">
+            <a class="nav-link" href="{% url 'view_req' %}">View Requests</a>
           </p> 
           <p class="nav-item">
             <a class="nav-link" href="{% url 'publications' %}">Publications</a>
