Deleting Publication removes from Calendar. Some changes to the personal view request CSS to be in same style as general calendar CSS

--- a/src/hr_management/req_leave/templates/view_request.html
+++ b/src/hr_management/req_leave/templates/view_request.html
@@ -21,6 +21,7 @@
             margin: 0 auto; /* Center the calendar on the page */
             height: 800px; /* Set your desired height */
         }
+
     </style>
 
 </head>
@@ -44,7 +45,7 @@
 
 <section>
     <table>
-        <thead>
+        <thead class="th-banner">
             <tr>
                 <th>Employee</th>
                 <th>Start Date</th>
