--- a/src/hr_management/req_leave/static/req_leave/style.css
+++ b/src/hr_management/req_leave/static/req_leave/style.css
@@ -27,12 +27,17 @@ th, td {
     border-bottom: 1px solid #ddd;
 }
 
-th {
+.th-banner {
     background-color: #033047;
     color: #fff;
 }
 
-tr:hover {
+.th-banner:hover {
+    background-color: none;
+    text-decoration: none;
+}
+
+tr:not(.th-banner):hover {
     background-color: #f5f5f5;
 }
 
