Deleting Publication removes from Calendar. Some changes to the personal view request CSS to be in same style as general calendar CSS

--- a/src/hr_management/req_leave/templates/request.html
+++ b/src/hr_management/req_leave/templates/request.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1> Request Leave Page </h1>
+    <h1> Request Leave </h1>
 
     {% if messages %}
     <ul class="messages">
