--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="{% url 'admin_home' %}">Admin Dashboard</a>
           </p>
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'manage_employees' %}">Employees</a>
+            <a class="nav-link" href="{% url 'manage_employees' %}">Manage Employees</a>
           </p>
           <p class="nav-item">
             <a class="nav-link" href="{% url 'manage_req' %}">Manage Requests</a>
@@ -55,7 +55,7 @@
             <a class="nav-link" href="{% url 'employee_home' %}">Home</a>
           </p>
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'submit_req' %}">Send Requests</a>
+            <a class="nav-link" href="{% url 'submit_req' %}">Request Day Off</a>
           </p> 
           <p class="nav-item">
             <a class="nav-link" href="{% url 'view_req' %}">View Requests</a>
