Deleting Publication removes from Calendar. Some changes to the personal view request CSS to be in same style as general calendar CSS

--- a/src/hr_management/calendar_app/static/calendar_app/style.css
+++ b/src/hr_management/calendar_app/static/calendar_app/style.css
@@ -24,3 +24,9 @@ section {
     border-radius: 5px;
     box-shadow: 0 0 10px rgb(220, 220, 220);
 }
+
+h1 {
+    color: #023047;
+    padding: 20px;
+    text-align: center;
+}
