--- a/src/hr_management/req_leave/templates/manage_request.html
+++ b/src/hr_management/req_leave/templates/manage_request.html
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title> {% block title %} Manage {% endblock %} </title>
+    <title> {% block title %} Manage Requests {% endblock %} </title>
     <link rel="stylesheet" type="text/css" href="{% static 'req_leave/style.css' %}">
 </head>
 <body>
