--- a/src/hr_management/req_leave/templates/manage_request.html
+++ b/src/hr_management/req_leave/templates/manage_request.html
@@ -45,7 +45,7 @@
         </thead>
         <tbody>
             {% for leave_request in view_request %}
-            <tr>
+            <tr class="th-items">
                 <td>{{ leave_request.employee_id }}</td>
                 <td>{{ leave_request.start_date }}</td>
                 <td>{{ leave_request.end_date }}</td>
@@ -53,7 +53,7 @@
                 <td>{{ leave_request.request_type }}</td>
                 <td>{{ leave_request.request_status }}</td>
                 
-                {% if leave_request.request_status == "Pending" %}
+                {% if leave_request.request_status == "Pending" and not leave_request.is_expired %}
                 
                 <td>
                     <form method="post"
@@ -73,9 +73,18 @@
                         <button type="submit" class="button decline-button"> Decline </button>
 
                     </form>
+
                 </td>
 
             {% endif %}
+
+            <!-- Can also be end date depending on company's policy -->
+            {% if leave_request.is_expired and leave_request.request_status == "Pending" %}
+
+                <td> <b>Request Expired</b> </td>
+
+            {% endif %}
+
 
             </tr>
             {% empty %}
